/*
 * $Id: ChangeLog,v 1.5212 2006/10/15 21:40:16 marchuet Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-10-16 10:35 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
   *source/rdd/bmdbfcdx/bmdbfcdx1.c
    ! Fixed a typo.

2006-10-15 23:27 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
   *source/rdd/dbcmd.c
    - reverted to original value:  pFilterInfo.fOptimized = FALSE;

2006-10-15 23:16 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/debug/debugger.prg
  * source/debug/dbgbrwsr.prg
    ! Correctly reposition windows after hiding the monitor window.
  * source/debug/dbghelp.prg
    ! Fixed a typo.
    + Added Ctrl F and Space as equivalents for PgDn and Ctrl B as an
      equivalent for PgUp in the help browser.

2006-10-15 21:54 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/debug/dbgwa.prg
    ! Switch to an open work area if the current one is !Used().

2006-10-14 20:00 UTC+0300 Pavel Tsarenko <tpe2@mail.ru>
  - source/ct/dattime2.prg
  + source/ct/dattime2.c
    + all functions rewritten in C
  * source/ct/Makefile
  * makefile.bc
  * makefile.dc
  * makefile.gc
  * makefile.pc
  * makefile.vc
  * makefile.wc
  * hrbdll.bc
  * hrbdll.dc
  * hrbdll.gc
  * hrbdll.pc
  * hrbdll.vc
  * hrbdll.wc
    * updated makefiles

2006-10-15 18:47 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/debug/dbgbrwsr.prg
  * source/debug/dbgtwin.prg
  * source/debug/debugger.prg
    ! Avoid TBrowses with null height. Fixed recursive repaint issues.

2006-10-14 13:52 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/debug/dbgwa.prg
    ! Fixed displaying BOF() value for both BOF() and EOF().

2006-10-13 18:47 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * contrib/rdd_ads/rddads.h